--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
   </head>
   <body>
       <img src="https://planetabelarus.by/upload/resize_cache/iblock/19c/1330_887_18e21fe612b4afb807a26ecc22279a1d9/19c1a7d0aeaf4ea6bd79162c163d2d32.jpg" weight="100%">
+      Das Grab der seligen Walentina von Minsk
+Die selige Valentina von Minsk (Valentina Fedorovna Sulkowska 1888-1966) wurde am 6. Februar 2006 - genau vierzig Jahre nach ihrem Tod - als Ortsheilige heiliggesprochen.
+Nicht weit von Stankowo, in dem kleinen Dorf Koski, lag Mutter Valentina viele Jahre lang in einer schäbigen Hütte auf ihrem Krankenbett. Durch ihre Gebete wurden  die Kranken  geheilt, Trauernde getröstet, unbußfertige Sünder bekehrt und auf den Weg des Heils geführt. Augenzeugen zufolge wurde Mutter Valentina  schon zu Lebzeiten als Heilige bezeichnet. Die Menschen kamen und kamen zu ihrem kleinen Haus. Einige kamen, um sich geistlichen oder weltlichen Rat zu holen, andere, um sich segnen zu lassen. Schon zu ihren Lebzeiten sagte die Mutter: "Kommt an mein Grab, als ob ich noch leben würde - ich werde allen guten Menschen helfen...". Die Worte von Staritsa wurden prophetisch. Die Heilige ist auf dem Friedhof zwischen den Dörfern Krysovo und Zabolotye begraben. Ihr Grab ist heute ein Ort der Wallfahrt und des Gebets.
   </body>
 </html>
